Prerelease - 20070414
	- Createt Smain.rb
	- Moved modules from src/classes to src/modules
	-

Prerelease - 20070402
First running version
	- Fixed graph creation
	- Fixed heartbeat (120 vs. stepsize 300)
	- Fixed filenames of graphics
	- Fixed missing swap routines (FreeBSD)
	- Updated graphic functions (from Sysstat 1.3)
