@@ -1,3 +1,0 @@
-
-smash (EMAIL)
-	- helping with reflective programming
