@@ -26,58 +26,85 @@
 # OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 
 
-# Initialize modules
-def initialize
-  @config['modules'].split().each do |modul|
-	  # Load modules and initialize them
-	  require "#{modul}.rb"
-	  @modules[modul] = Object.const_get(modul).new(@config)
+class Smain
+  @@childs = Hash.new
+  @@modules = Hash.new
+  @@config = Hash.new
+  
+  def initialize(config)
+    f = File.open(config)
+    f.each do |line|
+      if(line =~~/^#/)
+        continue
+      elsif(line =~ /^\n/)
+        continue
+      else
+        linea = line.split(/ /)
+        @@config[linea[0]] = linea[2]
+      end
+    end
+    f.close
+    
+    # Initialize modules
+    @@config['modules'].split().each do |modul|
+	    # Load modules and initialize them
+	    require "#{modul}.rb"
+	    @@modules[modul] = Object.const_get(modul).new(@@config)
 
-	  # Check if databases exist and create if needed
-    #	@modules[modul].mkdb
+	    # Check if databases exist and create if needed
+      @@modules[modul].mkdb
+    end
   end
-end
 
-# Childs for getting data and writing to database
-def get_data
-	@childs["data"] = Process.fork do 
-		trap("SIGHUP") { Process.exit!(0) }
-		trap("SIGTERM") { Process.exit!(0) }
+  # Childs for getting data and writing to database
+  def get_data
+	  @@childs["data"] = Process.fork do 
+      trap('HUP', 'IGNORE')
+		  trap("SIGTERM") { Process.exit!(0) }
+		  trap("SIGKILL") { Process.exit!(0) }
 
-		time = Time.now
+		  time = Time.now
 
-		loop do
-			if(time <= Time.now)
-				time = Time.now + @config['step']
-				@config['modules'].split().each do |modul|
-					@modules[modul].get
-					@modules[modul].write
-				end
-			end
-			sleep 30
-		end
-	end
-end
+		  loop do
+			  if(time <= Time.now)
+				  time = Time.now + @@config['step']
+				  @@config['modules'].split().each do |modul|
+					  @@modules[modul].get
+					  @@modules[modul].write
+				  end
+			  end
+			  sleep 30
+		  end
+	  end
+  end
 
-# Childs for creating graphics 
-def create_graphs
-	@childs["graph"] = Process.fork do 
-		trap("SIGHUP") { Process.exit!(0) }
-		trap("SIGTERM") { Process.exit!(0) }
+  # Childs for creating graphics 
+  def create_graphs
+	  @@childs["graph"] = Process.fork do 
+      trap('HUP', 'IGNORE')
+		  trap("SIGTERM") { Process.exit!(0) }
+		  trap("SIGKILL") { Process.exit!(0) }
 	
-		time = Time.now
+		  time = Time.now
 	
-		loop do
-			if(time <= Time.now)
-				time = Time.now + @config['graph_interval']
-				@config['modules'].split().each do |modul|
-					@modules[modul].graph("day")
-					@modules[modul].graph("week")
-					@modules[modul].graph("month")
-					@modules[modul].graph("year")
-				end
-			end
-			sleep 30
-		end
-	end
+		  loop do
+			  if(time <= Time.now)
+				  time = Time.now + @@config['graph_interval']
+				  @@config['modules'].split().each do |modul|
+					  @@modules[modul].graph("day")
+					  @@modules[modul].graph("week")
+					  @@modules[modul].graph("month")
+					  @@modules[modul].graph("year")
+				  end
+			  end
+			  sleep 30
+		  end
+	  end
+  end
+
+  def kill_childs
+    @@childs.each do |name pid|
+  	  Process.kill("SIGKILL", pid)
+    end
+  end
 end
