@@ -40,14 +40,16 @@ class Scpu
 	end
 
 	def mkdb
-	  @@rrd.create(@@config['step']), Time.now.to_i-1,
-	  	["DS:usr:GAUGE:#{@@config['step']+60}:0:U",
-			 "DS:sys:GAUGE:#{@@config['step']+60}:0:U",
-			 "DS:idl:GAUGE:#{@@config['step']+60}:0:U",
-			 "RRA:AVERAGE:0.5:1:2160", "RRA:AVERAGE:0.5:5:2016",
-			 "RRA:AVERAGE:0.5:15:2880", "RRA:AVERAGE:0.5:60:8760",
-			 "RRA:MAX:0.5:1:2160", "RRA:MAX:0.5:5:2016",
-			 "RRA:MAX:0.5:15:2880", "RRA:MAX:0.5:60:8760"])
+	  if(!FileTest.exist?(@@rrd.rrdname))
+	    @@rrd.create(@@config['step']), Time.now.to_i-1,
+	  	  ["DS:usr:GAUGE:#{@@config['step']+60}:0:U",
+			   "DS:sys:GAUGE:#{@@config['step']+60}:0:U",
+			   "DS:idl:GAUGE:#{@@config['step']+60}:0:U",
+			   "RRA:AVERAGE:0.5:1:2160", "RRA:AVERAGE:0.5:5:2016",
+			   "RRA:AVERAGE:0.5:15:2880", "RRA:AVERAGE:0.5:60:8760",
+			   "RRA:MAX:0.5:1:2160", "RRA:MAX:0.5:5:2016",
+			   "RRA:MAX:0.5:15:2880", "RRA:MAX:0.5:60:8760"])
+		end
 	end
 
 	def get
@@ -75,7 +77,8 @@ class Scpu
 	end
 
 	def write
-	  @@rrd.update("usr:sys:idl", ["N:#{@@data['tcp']}:#{@@data['udp']}"])
+	  @@rrd.update("usr:sys:idl",
+	    ["N:#{@@data['user']}:#{@@data['system']}:#{@@data['idle']}"])
 	end
 
 	def graph(timeframe)
@@ -94,28 +97,32 @@ class Scpu
 			@start = -31536000
 			@suffix = "year"
 		end
-
-		%x[#{@@config['rrdtool']} graph \
-			#{@@config['graphdir']}/#{@@config['cpu_prefix']}-#{@suffix}.png -i \
-			--start #{@start} -a PNG -t "CPU usage" \
-			--vertical-label "Percent" -w 600 -h 150 \
-			--color SHADEA#ffffff --color SHADEB#ffffff \
-			--color BACK#ffffff \
-			COMMENT:"\t   Current\t   Average\t    Maximum\\n" \
-			DEF:usr=#{@@config['dbdir']}/#{@@config['cpu_prefix']}.rrd:usr:AVERAGE \
-			DEF:sys=#{@@config['dbdir']}/#{@@config['cpu_prefix']}.rrd:sys:AVERAGE \
-			DEF:idl=#{@@config['dbdir']}/#{@@config['cpu_prefix']}.rrd:idl:AVERAGE \
-			LINE1:idl#00ff00:"Idle   " \
-			VDEF:idllast=idl,LAST GPRINT:idllast:"%3.0lf%%" \
-			VDEF:idlavg=idl,AVERAGE GPRINT:idlavg:"\t%3.0lf%%" \
-			VDEF:idlmax=idl,MAXIMUM GPRINT:idlmax:"\t%3.0lf%%\\n" \
-			LINE1:sys#0000ff:"System " \
-			VDEF:syslast=sys,LAST GPRINT:syslast:"%3.0lf%%" \
-			VDEF:sysavg=sys,AVERAGE GPRINT:sysavg:"\t%3.0lf%%" \
-			VDEF:sysmax=sys,MAXIMUM GPRINT:sysmax:"\t%3.0lf%%\\n" \
-			LINE1:usr#ff0000:"User   " \
-			VDEF:usrlast=usr,LAST GPRINT:usrlast:"%3.0lf%%" \
-			VDEF:usravg=usr,AVERAGE GPRINT:usravg:"\t%3.0lf%%" \
-			VDEF:usrmax=usr,MAXIMUM GPRINT:usrmax:"\t%3.0lf%%"] 
+    @@rrd.graph(
+      ["#{@@config['graphdir']}/#{@@config['cpu_prefix']}-#{@suffix}.png",
+			 "--title", "CPU usage",
+			 "--start", "#{@start}", 
+			 "--interlace",
+			 "--imgformat", "PNG",
+			 "--width=600", "--height=150",
+			 "--vertical-label", "Percent"
+			 "--color", "SHADEA#ffffff",
+			 "--color", "SHADEB#ffffff",
+			 "--color", "BACK#ffffff",
+			 "COMMENT:\"\t   Current\t   Average\t    Maximum\\n\"",
+			 "DEF:usr=#{@@rrd.rrdname}:usr:AVERAGE",
+			 "DEF:sys=#{@@rrd.rrdname}:sys:AVERAGE",
+			 "DEF:idl=#{@@rrd.rrdname}:idl:AVERAGE",
+			 "LINE1:idl#00ff00:\"Idle   \"",
+			 "VDEF:idllast=idl,LAST", "GPRINT:idllast:\"%3.0lf%%\"",
+			 "VDEF:idlavg=idl,AVERAGE" ,"GPRINT:idlavg:\"\t%3.0lf%%\"",
+			 "VDEF:idlmax=idl,MAXIMUM", "GPRINT:idlmax:\"\t%3.0lf%%\\n\"",
+			 "LINE1:sys#0000ff:\"System \"",
+			 "VDEF:syslast=sys,LAST", "GPRINT:syslast:\"%3.0lf%%\"",
+			 "VDEF:sysavg=sys,AVERAGE", "GPRINT:sysavg:\"\t%3.0lf%%\"",
+			 "VDEF:sysmax=sys,MAXIMUM", "GPRINT:sysmax:\"\t%3.0lf%%\\n\"",
+			 "LINE1:usr#ff0000:\"User   \"",
+			 "VDEF:usrlast=usr,LAST", "GPRINT:usrlast:\"%3.0lf%%\"",
+			 "VDEF:usravg=usr,AVERAGE", "GPRINT:usravg:\"\t%3.0lf%%\"",
+			 "VDEF:usrmax=usr,MAXIMUM", "GPRINT:usrmax:\"\t%3.0lf%%\""]) 
 	end
 end
